Updated cloud masking to correct branch

--- a/centos/science/Dockerfile
+++ b/centos/science/Dockerfile
@@ -64,7 +64,7 @@ RUN REPO_NAME=espa-spectral-indices \
 
 
 RUN REPO_NAME=espa-cloud-masking \
-    && REPO_TAG=cfmask-version_2.0.1.1 \
+    && REPO_TAG=rb-2.0.2 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
