--- a/centos/science/Dockerfile.template
+++ b/centos/science/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM espa/external:2.16.0
+FROM espa/external:ESPA_VERSION
 
 
 MAINTAINER USGS EROS LSRD http://eros.usgs.gov
@@ -20,7 +20,7 @@ ENV PREFIX=/usr/local \
 # ----------------------------------------------------------------------------
 # Install the espa-python-library
 RUN pip install \
-       git+https://github.com/USGS-EROS/espa-python-library.git@v1.0.1#espa
+       git+https://github.com/USGS-EROS/espa-python-library.git@ESPA_PYTHON_LIBRARY#espa
 
 
 # ----------------------------------------------------------------------------
@@ -28,7 +28,7 @@ RUN pip install \
 # ----------------------------------------------------------------------------
 
 RUN REPO_NAME=espa-product-formatter \
-    && REPO_TAG=product_formatter_v1.11.0 \
+    && REPO_TAG=ESPA_PRODUCT_FORMATTER \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -40,7 +40,7 @@ RUN REPO_NAME=espa-product-formatter \
 
 
 RUN REPO_NAME=espa-l2qa-tools \
-    && REPO_TAG=l2qa_tools_v1.2.0 \
+    && REPO_TAG=ESPA_L2QA_TOOLS \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -52,7 +52,7 @@ RUN REPO_NAME=espa-l2qa-tools \
 
 
 RUN REPO_NAME=espa-spectral-indices \
-    && REPO_TAG=spectral_indices_v2.5.0 \
+    && REPO_TAG=ESPA_SPECTRAL_INDICES \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -64,7 +64,7 @@ RUN REPO_NAME=espa-spectral-indices \
 
 
 RUN REPO_NAME=espa-cloud-masking \
-    && REPO_TAG=cfmask-v2.0.2 \
+    && REPO_TAG=ESPA_CLOUD_MASKING \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -76,7 +76,7 @@ RUN REPO_NAME=espa-cloud-masking \
 
 
 RUN REPO_NAME=espa-surface-water-extent \
-    && REPO_TAG=espa-v2.15.0 \
+    && REPO_TAG=ESPA_SURFACE_WATER_EXTENT \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -88,7 +88,7 @@ RUN REPO_NAME=espa-surface-water-extent \
 
 
 RUN REPO_NAME=espa-surface-reflectance \
-    && REPO_TAG=dev_lasrc3.5.2 \
+    && REPO_TAG=ESPA_SURFACE_REFLECTANCE \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -100,7 +100,7 @@ RUN REPO_NAME=espa-surface-reflectance \
 
 
 RUN REPO_NAME=espa-land-surface-temperature \
-    && REPO_TAG=dev_0.1.2 \
+    && REPO_TAG=ESPA_LAND_SURFACE_TEMPERATURE \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -112,7 +112,7 @@ RUN REPO_NAME=espa-land-surface-temperature \
 
 
 RUN REPO_NAME=espa-elevation \
-    && REPO_TAG=v2.2.0 \
+    && REPO_TAG=ESPA_ELEVATION \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -123,7 +123,7 @@ RUN REPO_NAME=espa-elevation \
 
 RUN echo "Release Candidate twisted-tulips"
 RUN REPO_NAME=espa-processing \
-    && REPO_TAG=rb-2.16.0 \
+    && REPO_TAG=ESPA_PROCESSING \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
