--- a/centos/science/Dockerfile.template
+++ b/centos/science/Dockerfile.template
@@ -33,7 +33,7 @@ RUN REPO_NAME=espa-product-formatter \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
@@ -45,7 +45,7 @@ RUN REPO_NAME=espa-l2qa-tools \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
@@ -57,7 +57,7 @@ RUN REPO_NAME=espa-spectral-indices \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
@@ -69,7 +69,7 @@ RUN REPO_NAME=espa-cloud-masking \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
@@ -81,7 +81,7 @@ RUN REPO_NAME=espa-surface-water-extent \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
@@ -93,7 +93,7 @@ RUN REPO_NAME=espa-surface-reflectance \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
@@ -105,7 +105,7 @@ RUN REPO_NAME=espa-land-surface-temperature \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
     && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
     && make install \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
