Updated build of HDF4 to not support netcdf4.  Because the ledaps-aux requires the real netcdf4 and the conflict....????

--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -318,6 +318,7 @@ RUN cd $SRC_DIR \
         --with-zlib=$ZLIBLIB \
         --with-szlib=$SZIPLIB \
         --disable-fortran \
+        --disable-netcdf \
         --enable-shared \
         --enable-static \
         --enable-static-exec \
