--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -396,7 +396,8 @@ RUN pip install --upgrade pip \
         requests==2.10.0 \
         lxml==3.6.0 \
         numpy==1.11.0 \
-        matplotlib==1.5.1
+        matplotlib==1.5.1 \
+        scipy==0.11.0
 
 
 # Install GDAL
