--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -398,6 +398,8 @@ RUN pip install --upgrade pip \
         numpy==1.11.0 \
         matplotlib==1.5.1 \
         scipy==0.11.0
+# Force matplotlib to build the font cache
+RUN python -c 'import matplotlib.pyplot'
 
 
 # Install GDAL
