--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -397,6 +397,7 @@ RUN pip install --upgrade pip \
         lxml==3.6.0 \
         numpy==1.11.0 \
         matplotlib==1.5.1 \
+    && pip install \
         scipy==0.11.0
 # Force matplotlib to build the font cache
 RUN python -c 'import matplotlib.pyplot'
