Modifications for migration to cmake3

--- a/centos/science/Dockerfile.in
+++ b/centos/science/Dockerfile.in
@@ -1,4 +1,4 @@
-FROM espa/external:ESPA_VERSION
+FROM @IMAGE_BASE_NAME@:@VERSION@
 
 
 MAINTAINER USGS EROS LSRD http://eros.usgs.gov
@@ -20,7 +20,7 @@ ENV PREFIX=/usr/local \
 # ----------------------------------------------------------------------------
 # Install the espa-python-library
 RUN pip install \
-       git+https://github.com/USGS-EROS/espa-python-library.git@ESPA_PYTHON_LIBRARY#espa
+       git+https://github.com/USGS-EROS/espa-python-library.git@@ESPA_PYTHON_LIBRARY@#espa
 
 
 # ----------------------------------------------------------------------------
@@ -28,7 +28,7 @@ RUN pip install \
 # ----------------------------------------------------------------------------
 
 RUN REPO_NAME=espa-product-formatter \
-    && REPO_TAG=ESPA_PRODUCT_FORMATTER \
+    && REPO_TAG=@ESPA_PRODUCT_FORMATTER@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -40,7 +40,7 @@ RUN REPO_NAME=espa-product-formatter \
 
 
 RUN REPO_NAME=espa-l2qa-tools \
-    && REPO_TAG=ESPA_L2QA_TOOLS \
+    && REPO_TAG=@ESPA_L2QA_TOOLS@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -52,7 +52,7 @@ RUN REPO_NAME=espa-l2qa-tools \
 
 
 RUN REPO_NAME=espa-spectral-indices \
-    && REPO_TAG=ESPA_SPECTRAL_INDICES \
+    && REPO_TAG=@ESPA_SPECTRAL_INDICES@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -64,7 +64,7 @@ RUN REPO_NAME=espa-spectral-indices \
 
 
 RUN REPO_NAME=espa-surface-water-extent \
-    && REPO_TAG=ESPA_SURFACE_WATER_EXTENT \
+    && REPO_TAG=@ESPA_SURFACE_WATER_EXTENT@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -76,7 +76,7 @@ RUN REPO_NAME=espa-surface-water-extent \
 
 
 RUN REPO_NAME=espa-surface-reflectance \
-    && REPO_TAG=ESPA_SURFACE_REFLECTANCE \
+    && REPO_TAG=@ESPA_SURFACE_REFLECTANCE@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -88,7 +88,7 @@ RUN REPO_NAME=espa-surface-reflectance \
 
 
 RUN REPO_NAME=espa-surface-temperature \
-    && REPO_TAG=ESPA_SURFACE_TEMPERATURE \
+    && REPO_TAG=@ESPA_SURFACE_TEMPERATURE@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -100,7 +100,7 @@ RUN REPO_NAME=espa-surface-temperature \
 
 
 RUN REPO_NAME=espa-elevation \
-    && REPO_TAG=ESPA_ELEVATION \
+    && REPO_TAG=@ESPA_ELEVATION@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -110,7 +110,7 @@ RUN REPO_NAME=espa-elevation \
     && rm -rf ${REPO_NAME}
 
 RUN REPO_NAME=espa-reprojection \
-    && REPO_TAG=ESPA_REPROJECTION \
+    && REPO_TAG=@ESPA_REPROJECTION@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -120,7 +120,7 @@ RUN REPO_NAME=espa-reprojection \
     && rm -rf ${REPO_NAME}
 
 RUN REPO_NAME=espa-plotting \
-    && REPO_TAG=ESPA_PLOTTING \
+    && REPO_TAG=@ESPA_PLOTTING@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -129,9 +129,10 @@ RUN REPO_NAME=espa-plotting \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
 
+
 RUN echo "Release Candidate rugged-terrain"
 RUN REPO_NAME=espa-processing \
-    && REPO_TAG=ESPA_PROCESSING \
+    && REPO_TAG=@ESPA_PROCESSING@ \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -144,6 +145,6 @@ RUN REPO_NAME=espa-processing \
 # ----------------------------------------------------------------------------
 # Add an entrypoint so that we can do some internal setup and then execute the
 # specified application
-COPY centos/science/science-entrypoint.sh /entrypoint.sh
+COPY science-entrypoint.sh /entrypoint.sh
 RUN chmod 755 /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
