--- a/centos/CMakeLists.txt
+++ b/centos/CMakeLists.txt
@@ -4,3 +4,4 @@ cmake_minimum_required ( VERSION 3.6 )
 add_subdirectory ( base )
 add_subdirectory ( external )
 add_subdirectory ( science )
+add_subdirectory ( modtran )
