--- a/centos/modtran/Dockerfile.in
+++ b/centos/modtran/Dockerfile.in
@@ -1,4 +1,4 @@
-FROM espa/external:ESPA_VERSION as modtran
+FROM @IMAGE_BASE_NAME@:@VERSION@ as modtran
 
 
 MAINTAINER USGS EROS LSRD http://eros.usgs.gov
@@ -14,7 +14,7 @@ LABEL description="This build adds in MODTRAN which we are not allowed to distri
 #&& make databases \
 #&& cp -r DATA /usr/local/share/MODTRAN_DATA \
 
-COPY external_tools/modtran-5.3.2.tar.gz $SRC_DIR
+COPY modtran-5.3.2.tar.gz $SRC_DIR
 RUN cd $SRC_DIR \
     && tar -xvf modtran-5.3.2.tar.gz \
     && cd modtran-5.3.2 \
@@ -30,7 +30,7 @@ RUN cd $SRC_DIR \
 
 # ----------------------------------------------------------------------------
 # Actual image generation
-FROM espa/science:ESPA_VERSION
+FROM @IMAGE_BASE_NAME@:@VERSION@
 
 
 MAINTAINER USGS EROS LSRD http://eros.usgs.gov
