--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -8,24 +8,53 @@ LABEL description="External software we use installed into the image as well as 
 
 
 # Compilers and all the rquired libraries
-RUN yum group install -y "Development Tools" \
+RUN yum groupinstall -y "Development Tools" \
     && yum install -y \
-        e2fsprogs \
-        expat-devel \
-        freetype-devel \
-        glibc-static \
-        libcurl-devel \
-        libidn-devel \
-        libgfortran-static \
-        libquadmath-static \
-        perl-ExtUtils-MakeMaker \
-        texinfo \
-        bzip2-devel \
-        zlib-devel \
-        zlib-static \
-        libpng-devel \
-        libpng-static \
-        rpm-build \
+        glibc-static-2.12-1.209.el6_9.2.x86_64 \
+        e2fsprogs-1.41.12-23.el6.x86_64 \
+        libcurl-devel-7.19.7-53.el6_9.x86_64 \
+        expat-devel-2.0.1-13.el6_8.x86_64 \
+        freetype-devel-2.3.11-17.el6.x86_64 \
+        zlib-static-1.2.3-29.el6.x86_64 \
+        e2fsprogs-libs-1.41.12-23.el6.x86_64 \
+        wget-1.12-10.el6.x86_64 \
+        glibc-static-2.12-1.209.el6_9.2.i686 \
+        perl-ExtUtils-MakeMaker-6.55-144.el6.x86_64 \
+        libpng-devel-1.2.49-2.el6_7.x86_64 \
+        libidn-devel-1.18-2.el6.x86_64 \
+        zlib-devel-1.2.3-29.el6.x86_64 \
+        autoconf-2.63-5.1.el6.noarch \
+        automake-1.11.1-4.el6.noarch \
+        binutils-2.20.51.0.2-5.47.el6_9.1.x86_64 \
+        bison-2.4.1-5.el6.x86_64 \
+        flex-2.5.35-9.el6.x86_64 \
+        gcc-4.4.7-18.el6.x86_64 \
+        gcc-c++-4.4.7-18.el6.x86_64 \
+        gettext-0.17-18.el6.x86_64 \
+        libtool-2.2.6-15.5.el6.x86_64 \
+        make-3.81-23.el6.x86_64 \
+        patch-2.6-6.el6.x86_64 \
+        pkgconfig-0.23-9.1.el6.x86_64 \
+        redhat-rpm-config-9.0.3-51.el6.centos.noarch \
+        rpm-build-4.8.0-55.el6.x86_64 \
+        byacc-1.9.20070509-7.el6.x86_64 \
+        cvs-1.11.23-16.el6.x86_64 \
+        diffstat-1.51-2.el6.x86_64 \
+        elfutils-0.164-2.el6.x86_64 \
+        gcc-gfortran-4.4.7-18.el6.x86_64 \
+        git-1.7.1-9.el6_9.x86_64 \
+        indent-2.2.10-7.el6.x86_64 \
+        patchutils-0.3.1-3.1.el6.x86_64 \
+        subversion-1.6.11-15.el6_7.x86_64 \
+        systemtap-2.9-7.el6.x86_64 \
+        bzr-2.1.1-2.el6.x86_64 \
+        compat-gcc-34-3.4.6-19.el6.x86_64 \
+        compat-gcc-34-c++-3.4.6-19.el6.x86_64 \
+        compat-gcc-34-g77-3.4.6-19.el6.x86_64 \
+        expect-5.44.1.15-5.el6_4.x86_64 \
+        lua-5.1.4-4.1.el6.x86_64 \
+        mercurial-1.4-5.el6_9.x86_64 \
+        rpmdevtools-7.5-2.el6.noarch \
     && yum clean metadata
 
 
@@ -126,11 +155,51 @@ ENV ZLIBINC=$ZLIB_PREFIX/include \
 ENV LD_LIBRARY_PATH=/usr/lib64:/usr/local/lib
 
 
+# Install OpenSSL (required by python-pip)
+COPY external_tools/openssl-1.0.1e.tar.gz $SRC_DIR
+RUN cd $SRC_DIR \
+    && gzip -d < openssl-1.0.1e.tar.gz > openssl-1.0.1e.tar \
+    && tar -xvf openssl-1.0.1e.tar \
+    && cd openssl-1.0.1e \
+    && ./config enable-shared \
+    && make \
+    && make install \
+    && cd $SRC_DIR \
+    && rm -Rf openssl-1.0.1e openssl-1.0.1e.tar.gz openssl-1.0.1e.tar
+ENV LD_LIBRARY_PATH=/usr/local/ssl/lib:${LD_LIBRARY_PATH}
+
+
+# Install Python
+COPY external_tools/Python-2.7.8.tgz $SRC_DIR
+RUN cd $SRC_DIR \
+    && ls ./* \
+    && gzip -d < Python-2.7.8.tgz > Python-2.7.8.tar \
+    && tar -xvf Python-2.7.8.tar \
+    && cd Python-2.7.8 \
+    && ./configure --prefix=/usr/local/python-espa --with-ssl=/usr/local/ssl --enable-shared \
+    && make -j 4 \
+    && make install \
+    && cd $SRC_DIR \
+    && rm -rf Python-2.7.8.tgz Python-2.7.8 Python-2.7.8.tar
+
+
+ENV LD_LIBRARY_PATH=/usr/local/python-espa/lib:${LD_LIBRARY_PATH}
+ENV ESPA_PYTHON_INSTALL=/usr/local/python-espa/lib
+ENV PATH=/usr/local/python-espa/bin:${PATH}
+
+
+# Install Pip
+COPY external_tools/get-pip.py $SRC_DIR
+RUN cd $SRC_DIR \
+    && python get-pip.py 'pip==7.1.0' --verbose \
+    && rm get-pip.py
+
+
 # Additional tools provided by the OS required for ESPA
-RUN yum install -y \
-        wget \
-        wgrib \
-    && yum clean metadata
+#### RUN yum install -y \
+####         wget \
+####         wgrib \
+####     && yum clean metadata
 
 
 # Install xz to get the lzma library
@@ -168,7 +237,7 @@ RUN cd $SRC_DIR \
     && ./configure --prefix=$XML2_PREFIX \
         --with-zlib=$ZLIB_PREFIX \
         --with-lzma=$XZ_PREFIX \
-        --with-python \
+        --with-python=$ESPA_PYTHON_INSTALL \
         --enable-shared \
         --enable-static \
     && make -j4 \
@@ -184,7 +253,7 @@ RUN cd $SRC_DIR \
     && cd libxslt-1.1.28 \
     && ./configure --prefix=$XSLT_PREFIX \
         --with-libxml-libs-prefix=$XML2LIB \
-        --with-python \
+        --with-python=$ESPA_PYTHON_INSTALL \
         --enable-shared \
         --enable-static \
     && make -j4 \
@@ -367,9 +436,11 @@ RUN cd $SRC_DIR \
 # Install HDFEOS2
 COPY external_tools/HDF-EOS2.19v1.00.tar.Z $SRC_DIR
 RUN cd $SRC_DIR \
-    && tar -xvf HDF-EOS2.19v1.00.tar.Z \
-    && cd hdfeos \
-    && ./configure --prefix=$HDFEOS_PREFIX \
+    && gzip -d < HDF-EOS2.19v1.00.tar.Z > HDF-EOS2.19v1.00.tar \
+    && tar -xvf HDF-EOS2.19v1.00.tar
+RUN cd $SRC_DIR \
+  && cd hdfeos \
+  && ./configure --prefix=$HDFEOS_PREFIX \
         --with-jpeg=$JPEGLIB \
         --with-zlib=$ZLIBLIB \
         --with-szlib=$SZIPINC,$SZIPLIB \
@@ -377,28 +448,49 @@ RUN cd $SRC_DIR \
         --disable-shared \
         --enable-static \
         CC="/usr/local/bin/h4cc -Df2cFortran" \
-    && make -j4 \
-    && make install \
-    && cd $SRC_DIR \
-    && rm -rf hdfeos HDF-EOS2.19v1.00.tar.Z
+  && make -j4 \
+  && make install \
+  && cd $SRC_DIR \
+  && rm -rf hdfeos HDF-EOS2.19v1.00.tar.Z HDF-EOS2.19v1.00.tar
 
 
 # Python environment setup
 # GDAL is installed into python through the below installation, because Numpy
 # must be installed into python before building GDAL
-RUN pip install --upgrade pip \
-    && pip install \
+RUN pip install --upgrade pip
+RUN pip install \
         --global-option=build_ext \
         --global-option="-L/usr/local/lib" \
         --global-option="-I/usr/local/include" \
         --global-option="-I/usr/local/include/libxml2" \
-        python-dateutil==2.5.3 \
-        requests==2.10.0 \
-        lxml==3.6.0 \
-        numpy==1.11.0 \
-        matplotlib==1.5.1 \
-    && pip install \
+        python-dateutil==1.5 \
+        requests==2.4.3 \
+        lxml==3.6.1
+
+
+# Install linear algebra libraries to build SciPy (and NumPy)
+RUN yum install -y \
+    blas-3.2.1-5.el6.x86_64 \
+    blas-devel-3.2.1-5.el6.x86_64 \
+    atlas-3.8.4-2.el6.x86_64 \
+    atlas-devel-3.8.4-2.el6.x86_64 \
+    lapack-3.2.1-5.el6.x86_64 \
+    lapack-devel-3.2.1-5.el6.x86_64
+
+
+RUN GCC="-I/usr/local/python-espa/include/python2.7" \
+    pip install \
+        --global-option=build_ext \
+        numpy==1.6.1
+
+RUN pip install \
+        --global-option=build_ext \
         scipy==0.11.0
+
+RUN pip install \
+        --global-option=build_ext \
+        matplotlib==1.3.1 \
+        tornado==3.1.1
 # Force matplotlib to build the font cache
 RUN python -c 'import matplotlib.pyplot'
 
@@ -410,7 +502,7 @@ RUN cd $SRC_DIR \
     && cd gdal-1.11.4 \
     && ./configure --prefix=$GDAL_PREFIX \
         --with-liblzma \
-        --with-python=yes \
+        --with-python=/usr/local/python-espa/bin/python \
         --with-static-proj4=$PROJ4_LIB \
         --enable-shared \
         --enable-static \
