Split the modtran building and final image into two

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,5 @@ set ( ESPA_PROCESSING v2.25.0 )
 add_subdirectory ( base-image )
 add_subdirectory ( thirdparty-image )
 add_subdirectory ( science-image )
+add_subdirectory ( modtran-build-image )
 add_subdirectory ( modtran-image )
