--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 services: docker
 sudo: required
 script:
-  - make build
+  - travis_wait 45 make build
 after_script:
   - docker images
 deploy:
