BLD: modify for USGSEROS build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ after_script:
 deploy:
   - provider: script
     script: make docker-deploy
-    on:
-      branch:
-        - master
-        - devel
+#     on:
+#       branch:
+#         - master
+#         - devel
 notifications:
   email:
     on_success: never
