BLD: only deploy on certain branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ script:
   - make build
 after_script:
   - docker images
-  - make docker-deploy
-# deploy:
-#   - provider: script
-#     script: make docker-deploy
-#     on:
-#       branch:
-#         - master
-#         - devel
+deploy:
+  - provider: script
+    script: make docker-deploy
+    on:
+      branch:
+        - master
+        - develop
+        - docker-devel
 notifications:
   email:
     on_success: never
