--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 external_tools/*.tar.gz
 external_tools/HDF-EOS2.19v1.00.tar.Z
+external_tools/HDF-EOS5.1.16.tar.Z
 external_tools/wgrib.tar.v1.8.1.2c
 external_tools/Python-2.7.11.tgz
 external_tools/gosu-amd64
