Updated versioning and using a fixed/updated version of ST code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ project ( bridge NONE )
 
 
 set ( ${PROJECT_NAME}_VERSION_MAJOR 0 )
-set ( ${PROJECT_NAME}_VERSION_MINOR 7 )
-set ( ${PROJECT_NAME}_VERSION_PATCH 0 )
-set ( ${PROJECT_NAME}_VERSION_TWEAK 1 )
+set ( ${PROJECT_NAME}_VERSION_MINOR 8 )
+set ( ${PROJECT_NAME}_VERSION_PATCH 1 )
+set ( ${PROJECT_NAME}_VERSION_TWEAK 0 )
 set ( VERSION ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}.${${PROJECT_NAME}_VERSION_TWEAK} )
 
 
@@ -24,7 +24,7 @@ set ( ESPA_L2QA_TOOLS l2qa_tools_v1.6.0 )
 set ( ESPA_SPECTRAL_INDICES spectral_indices_v2.6.0 )
 set ( ESPA_SURFACE_WATER_EXTENT espa-v2.27.0 )
 set ( ESPA_SURFACE_REFLECTANCE surface_reflectance_sept2017 )
-set ( ESPA_SURFACE_TEMPERATURE st-rit-v1.1.1 )
+set ( ESPA_SURFACE_TEMPERATURE dev_1.2 )
 set ( ESPA_ELEVATION v2.3.1 )
 set ( ESPA_REPROJECTION v1.0.2 )
 set ( ESPA_PLOTTING v0.1.0 )
