Improve out-of-source build
Pull all external tarballs into the build directory.
Put modified Dockerfiles in build directory.
Add target dependencies to ensure build order.
Check for modtran tarball existence before proceeding with
modtran image build.
Set the modtran build to use O3 optimization.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ set ( ESPA_REPROJECTION v1.0.2 )
 set ( ESPA_PLOTTING v0.1.0 )
 set ( ESPA_PROCESSING v2.25.0 )
 
+# Set a flag denoting whether the build is in-source.
+if ("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
+    set (IN_SOURCE_BUILD TRUE)
+endif()
 
 add_subdirectory ( base-image )
 add_subdirectory ( thirdparty-image )
