--- a/base-image/CMakeLists.txt
+++ b/base-image/CMakeLists.txt
@@ -5,7 +5,7 @@ set ( IMAGE_NAME ${PROJECT_NAME}/base )
 
 
 add_custom_target (
-    base-image ALL
+    base-image
     COMMAND docker build --tag ${IMAGE_NAME}:${VERSION} --file Dockerfile .
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
