--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-thirdparty-image/external_tools/*.tar.gz
-thirdparty-image/external_tools/HDF-EOS2.19v1.00.tar.Z
-thirdparty-image/external_tools/wgrib.tar.v1.8.1.2c
-thirdparty-image/external_tools/Python-2.7.11.tgz
-thirdparty-image/external_tools/gosu-amd64
-thirdparty-image/Dockerfile
-science-image/Dockerfile
-modtran-build-image/Dockerfile
-modtran-image/Dockerfile
-modtran-image/modtran-*
+build
