--- a/modtran-build-image/CMakeLists.txt
+++ b/modtran-build-image/CMakeLists.txt
@@ -6,12 +6,18 @@ set ( IMAGE_NAME ${PROJECT_NAME}/modtran_build )
 
 
 configure_file ( ${CMAKE_CURRENT_SOURCE_DIR}/Dockerfile.in
-                 ${CMAKE_CURRENT_SOURCE_DIR}/Dockerfile
+                 Dockerfile
                  @ONLY )
 
+if (NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/modtran-5.3.2.tar.gz)
+    message(WARNING "modtran-5.3.2.tar.gz not found in build directory.  "
+                    "Needed to build the MODTRAN Docker image.")
+endif ()
 
 add_custom_target (
-    modtran-build-image ALL
+    modtran-build-image
     COMMAND docker build --tag ${IMAGE_NAME}:${VERSION} --file Dockerfile .
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/modtran-5.3.2.tar.gz
 )
+
+add_dependencies(modtran-build-image science-image)
