--- a/modtran-build-image/Dockerfile.in
+++ b/modtran-build-image/Dockerfile.in
@@ -18,6 +18,7 @@ COPY modtran-5.3.2.tar.gz $SRC_DIR
 RUN cd $SRC_DIR \
     && tar -xvf modtran-5.3.2.tar.gz \
     && cd modtran-5.3.2 \
+    && sed -i 's/^FFLAGS=.*$/FFLAGS=\'"'"'-O3\'"'"'/' configure.in \
     && ./bootstrap \
     && ./configure \
     && make install \
