--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -441,7 +441,8 @@ RUN pip install --upgrade pip \
         requests==2.10.0 \
         lxml==3.6.0 \
         numpy==1.11.0 \
-        matplotlib==1.5.1
+        matplotlib==1.5.1 \
+        netCDF4=4.3.2
 
 
 # Install GDAL
