--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -442,7 +442,7 @@ RUN pip install --upgrade pip \
         lxml==3.6.0 \
         numpy==1.11.0 \
         matplotlib==1.5.1 \
-        netCDF4=4.3.2
+        netCDF4==1.4.2
 
 
 # Install GDAL
