Update for espa-processing 2.30.0

--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -156,6 +156,7 @@ ENV LD_LIBRARY_PATH=/usr/lib64:/usr/local/lib
 RUN yum install -y \
         wget \
         wgrib \
+        pigz \
     && yum clean metadata
 
 
