Add espa-surface-temperature (see caveat in log)
Caveat: the dev_1.4 tag is probably going to disappear.

--- a/centos/science/Dockerfile.template
+++ b/centos/science/Dockerfile.template
@@ -99,6 +99,18 @@ RUN REPO_NAME=espa-land-surface-temperature \
     && rm -rf ${REPO_NAME}
 
 
+RUN REPO_NAME=espa-surface-temperature \
+    && REPO_TAG=ESPA_SURFACE_TEMPERATURE \
+    && cd $SRC_DIR \
+    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
+    && cd ${REPO_NAME} \
+    && git checkout ${REPO_TAG} \
+    && make BUILD_STATIC=yes ENABLE_THREADING=yes \
+    && make install \
+    && cd $SRC_DIR \
+    && rm -rf ${REPO_NAME}
+
+
 RUN REPO_NAME=espa-elevation \
     && REPO_TAG=ESPA_ELEVATION \
     && cd $SRC_DIR \
