--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -432,8 +432,9 @@ RUN cd $SRC_DIR \
 # Python environment setup
 # GDAL is installed into python through the below installation, because Numpy
 # must be installed into python before building GDAL
-RUN pip install --upgrade pip setuptools \
-    && pip install \
+RUN pip install --upgrade pip setuptools
+RUN pip install numpy==1.11.0
+RUN pip install \
         --global-option=build_ext \
         --global-option="-L/usr/local/lib" \
         --global-option="-I/usr/local/include" \
@@ -441,7 +442,6 @@ RUN pip install --upgrade pip setuptools \
         python-dateutil==2.5.3 \
         requests==2.10.0 \
         lxml==3.6.0 \
-        numpy==1.11.0 \
         matplotlib==1.5.1 \
         netCDF4==1.4.2
 
