Include OpenJPEG to support Sentinel 2 processing.

--- a/centos/external/Dockerfile.template
+++ b/centos/external/Dockerfile.template
@@ -461,3 +461,20 @@ RUN cd $SRC_DIR \
     && make install \
     && cd $SRC_DIR \
     && rm -rf gdal-1.11.4 gdal-1.11.4.tar.gz
+
+# Compile and install OpenJPEG
+RUN yum install -y cmake
+RUN REPO_NAME=openjpeg \
+    && REPO_TAG=v2.3.1 \
+		&& cd $SRC_DIR \
+    && git clone https://github.com/uclouvain/${REPO_NAME}.git ${REPO_NAME} \
+    && cd ${REPO_NAME} \
+    && git checkout ${REPO_TAG} \
+		&& mkdir build \
+		&& cd build \
+    && cmake .. -DCMAKE_BUILD_TYPE=Release \
+    && make \
+		&& make install \
+		&& make clean \
+    && cd $SRC_DIR \
+    && rm -rf ${REPO_NAME}
